--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "autoprefixer": "^10.4.21",
     "boardgame.io": "^0.50.2",
-    "framer-motion": "^12.15.0",
-    "lucide-react": "^0.511.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
